<resources>
    <string name="app_name">电子书阅读器</string>
    <string name="login">请登录</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_select_file">导入书本</string>
    <string name="action_search_file">搜索文件</string>
    <string name="action_add_bookmark">添加书签</string>
    <string name="action_read_book">读书</string>

    <string name="press_twice_to_exit">连续点击才能退出</string>
    <string name="root">根目录</string>
    <string name="add_files">加入书架</string>
    <string name="choose_all">全选</string>
    <string name="delete">取消</string>
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>

    <string name="read_setting_directory">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_day">日间</string>
    <string name="read_setting_pagemode">翻页</string>
    <string name="read_setting_set">设置</string>
    <string name="read_setting_pre">上一章</string>
    <string name="read_setting_next">下一章</string>

    <string name="setting_system">系统</string>
    <string name="setting_dark">暗</string>
    <string name="setting_bright">亮</string>
    <string name="setting_add">A+</string>
    <string name="setting_subtract">A-</string>
    <string name="setting_default">默认</string>

    <string name="font_default">系统默认</string>
    <string name="font_qihei">羿创旗黑</string>
    <string name="font_xinshou">新宋体</string>
    <string name="font_wawa">娃娃体</string>
    <string name="font_fzxinghei">行黑</string>
    <string name="font_fzkatong">卡通</string>
    <string name="font_bysong">繁宋体</string>
    
    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_autoread">自动阅读</string>
    <string name="page_mode_cover">覆盖</string>
    <string name="page_mode_slide">滑动</string>
    <string name="page_mode_none">无</string>

    <string name="readseting">设置</string>

     <string name="aboutContent">如风小说阅读是专注于提供更舒适的阅读体验,主打本地阅读,操作方式简单易上手,目前支持txt格式。</string>
     <string name="noteContent">本书内容均来自于第三方网站，若您认为被搜索链接到的第三方网页所载的内容侵犯了您的权利或者违反相关法律，请直接联系该网站或相关司法机关联系，寻求法律保护。</string>
    <string name="disclaimer_statement_description">"      在使用电子书阅读器（简称“本软件”）前，请您（个人、公司、其他组织）仔细阅读本使用协议如下全部内容以便决定是否继续使用本软件，您的继续使用行为即表示您已经完全理解并接受本使用协议，否则您应当立即卸载并删除本软件。同时，本使用协议内容可能会根据将来服务内容的变化而做相应的更改，故请您及时予以关注并决定是否继续接受相关更改。
        一、免责声明
        1.1、本软件仅为根据您的搜索指令提供搜索、链接服务，搜索结果均来自于第三方网站，本软件不会对第三方网站内容作任何实质性的编辑、整理、修改，搜索结果亦不代表本软件同意、赞同第三方网站的观点。本软件不能保证被链接内容的正确性、合法性，是否同意、采用、引用该等内容完全由您自行决定并自行担责。
        1.2、本软件的下载、安装均是免费的，但您应当自行承担因使用本软件所需的购买合适的终端设备费用及因访问网络而产生的应由电信运营商（网络服务提供商）收取的网络服务等费用，如您拒绝付费则您将无法使用本软件的部分/全部功能。
        1.3、本软件不保证在第三方网站修改、删除了相关内容或设置了保护性措施阻止访问时仍能为您提供完整的、不间断的服务。
        1.4、本软件不对任何因网络状况、通讯线路、恶意攻击、病毒侵入、政府管制及第三方网站等造成的影响本软件正常使用的情形承担任何法律责任。
        二、使用规范
        2.1、通过本软件提供的内容（包括但不限于文本、图片、软件本身等）均受相关著作权、商标和/或其它法律的保护，未经相关权利人同意，任何人均不得有下列行为：擅自复制、转载、传播本软件提供的内容；删除、改变相关内容的权利管理电子信息；进行反向工程、反向编译、反汇编等。
        2.2、您在遵守国家法律、法规、政策及本协议的前提下，可依本协议使用本软件。任何情况下您都不得利用本软件存储、发表、传播违反国家法律、法规及政策规定的内容，不得利用本软件存储、发表、传播侵害他人知识产权、商业秘密、个人隐私等任何合法权益的行为及其他危害计算机网络安全的行为。
        2.3、您不得利用本软件做出其他国家法律、法规、政策禁止的行为及未经本软件书面许可的行为。
        三、版权保护
        3.1、本软件内容全部来自于第三方网站，若您认为被搜索链接到的第三方网页所载的内容侵犯了您的权利，本软件建议您直接与该网站或相关司法机关联系，寻求法律保护。
        3.2、如您认为本软件提供的链接侵犯了您的合法权益（包括但不限于著作权、商标权、人身权等），需要本软件对涉嫌侵权链接采取删除、屏蔽、断开链接等必要措施的，您可随时向本软件发出权利通知，本软件在收到通知后，会依法处理。
        3.3、为了及时有效处理您的投诉，根据法律规定，您的权利通知须包含以下信息：
        （1）权利人的姓名（名称）、联系方式、营业执照（单位）和身份证（个人）地址
        本处所称的“权利人”，指拥有合法权益的权利所有人或经权利所有人合法授权的代理人，包括自然人、法人或其他组织等。如您系维权代理人，还需提供相关授权证明等文件。
        （2）要求删除或者断开链接的侵权作品的名称和网络地址
        为便于准确定位侵权作品，提高处理效率，您须提供：侵权作品在本软件上的准确位置、搜索关键词、搜索结果页面截图、侵权链接等。
        （3）构成侵权的初步证明材料
        您须提供权利人拥有权利的权属证明材料，包括但不限于有权机构颁发的证书、授权书、合同、被投诉内容构成对权利人的商标、名誉等合法权益侵犯的有效证明等。
        （4）权利人保证
        您应当保证：您的权利通知和提供的相关材料皆是真实、有效和合法的。如本软件根据您的投诉而删除或者断开有关侵权服务的链接或相关内容，给本软件和被投诉方造成任何损失的，应由您承担责任。
        3.4、如您已经就被投诉内容向相关政府部门或法院提起行政投诉或诉讼的，请在提交通知书时，将相关受理证明及提交政府部门或法院的证据材料一同提交给本软件，这将有利于您的投诉尽快处理。
        3.5、以上材料均应经过权利人签署，如您为个人，需亲笔签字；如您为法人或其他组织，需加盖公章。请您将上述材料的扫描件发送至邮箱：2748388827@qq.com。如您的权利通知符合法律要求，本软件会在通知后24小时内删除侵权作品、断开相关链接。
        3.6、反通知。被移除、删除、断开链接的内容提供者可以依照上述步骤及要求向本软件发出反通知，如反通知成立，本软件将根据具体情况恢复被移除、删除、断开的链接且对该恢复行为不承担法律责任。
        四、拒绝蜘蛛协议（Robots Exclusion Protocol）
        任何网站如果不想被本软件收录（即不被搜索到），应及时向本软件反映，或者在其网站页面中根据拒绝蜘蛛协议（Robots Exclusion Protocol）加注拒绝收录的标记。否则，本软件将依照惯例视其为可收录网站。
        五、其他
        5.1、本软件有权根据具体情况修改本协议内容。对此，我们不会有专门通知，您可以在相关页面中查阅最新的条款。条款变更后，如果您继续使用本服务，即视为您已接受修改后的条款。如果您不接受，应当停止使用本服务。
        5.2、本协议的履行、解释及纠纷解决，适用中华人民共和国大陆地区法律。
        "</string>
    <string name="actionbar_more">更多信息</string>
    <string name="listview_header_hint_normal">下拉刷新...</string>
    <string name="listview_header_hint_release">释放刷新...</string>
    <string name="listview_loading">努力加载中...</string>
    <string name="nomore_loading">没有更多内容了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成...</string>
    <string name="listview_header_last_time">上次更新时间：</string>

</resources>
